; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_dlpar.c_dlpar_free_cc_property.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_dlpar.c_dlpar_free_cc_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.property = type { %struct.property*, %struct.property* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.property*)* @dlpar_free_cc_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dlpar_free_cc_property(%struct.property* %0) #0 {
  %2 = alloca %struct.property*, align 8
  store %struct.property* %0, %struct.property** %2, align 8
  %3 = load %struct.property*, %struct.property** %2, align 8
  %4 = getelementptr inbounds %struct.property, %struct.property* %3, i32 0, i32 1
  %5 = load %struct.property*, %struct.property** %4, align 8
  %6 = call i32 @kfree(%struct.property* %5)
  %7 = load %struct.property*, %struct.property** %2, align 8
  %8 = getelementptr inbounds %struct.property, %struct.property* %7, i32 0, i32 0
  %9 = load %struct.property*, %struct.property** %8, align 8
  %10 = call i32 @kfree(%struct.property* %9)
  %11 = load %struct.property*, %struct.property** %2, align 8
  %12 = call i32 @kfree(%struct.property* %11)
  ret void
}

declare dso_local i32 @kfree(%struct.property*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
